@@ -70,4 +70,11 @@ Then /^I should be able to refresh the page$/ do
   @page.refresh
 end
 
+When /^I press the back button$/ do
+  @page.back
+end
+
+When /^I press the forward button$/ do
+  @page.forward
+end
 
