@@ -2,6 +2,7 @@
 * Ehnancements
   * Can now find span by :text
   * Can now find button by :value
+  * Added #forward and #back methods to PageObject
   * Updated to use watir-webdriver 0.3.0
 
 === Version 0.2.3 / 2011-08-01
